# Idea-Enhancer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  enhanced_idea_report.md  output_templates.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
knowledge/: user_preference.txt
src/idea_enhancer/: crew.py  main.py
src/idea_enhancer/config/: agents.yaml  tasks.yaml
src/idea_enhancer/tools/: __init__.py  custom_tool.py  reddit_tool.py
tests/: test_reddit_tool.py  test_web_search.py
