[project]
name = "idea-enhancer"
version = "0.1.0"
description = "AI-powered executive board (CEO, CTO, CFO, CMO) for transforming project ideas into comprehensive blueprints"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.14.2",
    "crewai-tools>=0.15.0",
    "langchain-community>=0.4.1",
    "pytest>=9.0.3",
    "ddgs>=9.14.0",
    "duckduckgo-search>=8.1.1",
    "praw>=8.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Business Owners",
    "Intended Audience :: Entrepreneurs",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: CrewAI",
]
authors = [
    { name = "Ahmed Sherif Hamdy", email = "ahmedsherifhamdy2442004@gmail.com" }
]
urls = { homepage = "https://github.com/itzAnubis/Idea-Enhancer", "Documentation" = "https://github.com/itzAnubis/Idea-Enhancer#readme" }

[project.scripts]
idea_enhancer = "idea_enhancer.main:run"
run_crew = "idea_enhancer.main:run"
train = "idea_enhancer.main:train"
replay = "idea_enhancer.main:replay"
test = "idea_enhancer.main:test"
run_with_trigger = "idea_enhancer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "black>=25.0.0",
    "pytest>=9.0.3",
    "coverage>=7.6.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"